--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -97,5 +97,16 @@
             android:textColor="@color/description"
             android:textSize="12dp" />
 
+        <TextView
+            android:id="@+id/profAsignado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/descriptionLbl"
+            android:layout_below="@id/titleSecLbl"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/description"
+            android:textSize="12dp" />
+
+
     </RelativeLayout>
 </FrameLayout>
