--- a/app/src/main/res/layout/activity_update_profesor.xml
+++ b/app/src/main/res/layout/activity_update_profesor.xml
@@ -6,4 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".activities.UpdateProfesorActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+    <EditText
+        android:id="@+id/etCedula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint= "Cédula"
+        android:inputType="number"
+        app:layout_constraintStart_toEndOf="@+id/tvCedula"
+        app:layout_constraintTop_toBottomOf="@+id/tvTituloUpdateProfesor" />
+
+        <EditText
+            android:id="@+id/etNombreP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:ems="10"
+            android:hint="Nombre"
+            android:inputType="textPersonName"
+            app:layout_constraintStart_toEndOf="@+id/tvNombre"
+            app:layout_constraintTop_toBottomOf="@+id/etCedula" />
+
+        <EditText
+            android:id="@+id/etTelefono"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:ems="10"
+            android:hint="Teléfono"
+            android:inputType="number"
+            app:layout_constraintStart_toEndOf="@+id/tvTelefono"
+            app:layout_constraintTop_toBottomOf="@+id/etNombreP" />
+
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textPersonName"
+            app:layout_constraintStart_toEndOf="@+id/tvEmail"
+            app:layout_constraintTop_toBottomOf="@+id/etTelefono" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addUpdProfesorBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_check"
+            android:tint="@android:color/background_light"
+            app:backgroundTint="@color/bg_row_background"
+            tools:layout_editor_absoluteX="319dp"
+            tools:layout_editor_absoluteY="547dp" />
+
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
