--- a/app/src/main/res/drawable-v21/bg_listview.xml
+++ b/app/src/main/res/drawable-v21/bg_listview.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#6A82FB"
-                android:endColor="#6A82FB"
+                android:startColor="#005499"
+                android:endColor="#005999"
                 android:type="linear"/>
         </shape>
     </item>
