--- a/app/src/main/res/layout/activity_update_profesor.xml
+++ b/app/src/main/res/layout/activity_update_profesor.xml
@@ -21,7 +21,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
-    <EditText
+        <TextView
+            android:id="@+id/labelAProfesor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/labelAProfesor"
+            android:textSize="18sp"
+            android:textStyle="normal|bold" />
+
+        <EditText
         android:id="@+id/etCedula"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
