--- a/app/src/main/res/layout/spinner_item_diego.xml
+++ b/app/src/main/res/layout/spinner_item_diego.xml
@@ -5,6 +5,7 @@
     android:textSize="18dp"
     android:padding="6sp"
     android:textColor="#ffffff"
+    android:paddingBottom="2dp"
     android:background="@drawable/bg_listview"
     android:fontFamily="@font/caviardreams"
     xmlns:android="http://schemas.android.com/apk/res/android" />
