--- a/app/src/main/res/layout/activity_update_profesor.xml
+++ b/app/src/main/res/layout/activity_update_profesor.xml
@@ -77,7 +77,7 @@
             android:layout_marginTop="0dp"
             android:ems="10"
             android:hint="Email"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             app:layout_constraintStart_toEndOf="@+id/tvEmail"
             app:layout_constraintTop_toBottomOf="@+id/etTelefono" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
