Estilo boton login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/btn_login"
                 android:text="Ingresar"
+                android:textColor="#fff"
                 android:textStyle="bold"
                 android:textAllCaps="false"/>
 
