--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -64,13 +65,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:padding="@dimen/padd_10">
+        android:padding="@dimen/padd_10"> 
+
+        <ImageView
+            android:id="@+id/imageCarrera"
+            android:layout_width="65dp"
+            android:layout_height="43dp"
+            app:srcCompat="@drawable/codigo" />
 
         <TextView
             android:id="@+id/titleFirstLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:layout_toRightOf="@+id/imageCarrera"
             android:fontFamily="sans-serif-medium"
             android:maxLines="1"
             android:textColor="@color/item_name"
@@ -92,6 +100,7 @@
             android:id="@+id/descriptionLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imageCarrera"
             android:layout_below="@id/titleFirstLbl"
             android:layout_marginTop="5dp"
             android:textColor="@color/description"
@@ -106,7 +115,5 @@
             android:layout_marginTop="5dp"
             android:textColor="@color/description"
             android:textSize="12dp" />
-
-
     </RelativeLayout>
 </FrameLayout>
