color de boton y letra A en gestion academica

--- a/app/src/main/res/drawable-v24/btn_login.xml
+++ b/app/src/main/res/drawable-v24/btn_login.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="150dp"/>
     <stroke android:width="5px"
-        android:color="#3791a4"/>
-    <solid android:color="#3791a4"/>
+        android:color="#01579B"/>
+    <solid android:color="#01579B"/>
 </shape>
